# aurora-origin-python-sdk

./: .aurora-architecture.yml  .gitignore  LICENSE  README.md  README_DEVELOP.md  VERSION  examples.ipynb  pydoc-markdown.yml  pyproject.toml
.claude/skills/uv-version-bump/: SKILL.md
.github/workflows/: deploy-docs.yml  pr-check.yml
aurora/core/client/: api_session.py
aurora/origin/client/: origin_session.py  session.py
client/: origin_session.py
client/gql/queries/: project.py
docs/: 404.html  common-patterns.md  conf.py  docusaurus.config.js  index.html  index.md  installation.md  sitemap.xml
docs/_static/: custom.css
docs/api/: index.md  index.rst  input_queries.session.md  origin_session.md  service.inputs_editor.md  service.project.md  service.scenario.md  types.scenario_enums.md  types.scenario_types.md
docs/assets/css/: styles.63b8e0ec.css  styles.f9957def.css
docs/assets/js/: 00383a4f.2705902b.js  00383a4f.abee6fed.js  04996e28.675c79f2.js  0ac489e7.06c5379d.js  0ac489e7.3795208e.js  0ac489e7.4c37443e.js  0ac489e7.5f50060e.js  0ac489e7.8d1e998d.js  0ac489e7.a3b5c206.js  0ac489e7.b3c2fb91.js  0ac489e7.bf2c3846.js  0ac489e7.c80fd430.js  0ac489e7.d15460a9.js  0ac489e7.d4c75074.js  0cc35c76.29e23462.js  0e384e19.1af29f9d.js  0e384e19.ad48d587.js  0e384e19.b8f60698.js  1df93b7f.08df0cab.js  1df93b7f.d7e430ed.js  1ff39937.64fb6b44.js  2245dd4c.ed5455f1.js  2f220727.f320787f.js  393be207.30535165.js  5a71d88c.05378150.js  5a71d88c.0c8a0b8b.js  5a71d88c.18e7c4cf.js  5a71d88c.64d92413.js  5a71d88c.7c002142.js  5a71d88c.80f607c4.js  5a71d88c.928f7282.js  5a71d88c.9f954421.js  5a71d88c.a8b10a05.js  5a71d88c.b3ca3449.js  5a71d88c.c9c73774.js  5a71d88c.db9d1d64.js  5a71d88c.df3d0196.js  5a71d88c.edbd1ca1.js  5a71d88c.f636c78d.js  5ede6613.1536318c.js  (+79 more)
docs/docs/common-patterns/: index.html
docs/docs/intro/: index.html
docs/docs/manage-docs-versions/: index.html
docs/docs/origin_sdk/: _category_.json
docs/docs/tutorial-basics/: intro.md
docs/markdown-page/: index.html
docs/security/: dependabot-triage-2026-06-15.md
docs/src/pages/: index.tsx
docsite/: docusaurus.config.js  manage-docs-versions.md  package-lock.json  package.json
docsite/docs/: intro.md  sidebar.json
docsite/docs/origin_sdk/: OriginSession.md
docsite/docs/tutorial-basics/: common-patterns.mdx  intro.md
docsite/src/css/: custom.css
docsite/src/pages/: index.tsx
smoke-tests/: test_gql_utils.py  test_project.py
smoke-tests/input_tests/: test_commodities.py  test_technology.py
src/core/: api.py  data.py
src/origin_sdk/: OriginSession.py  __init__.py  origin_session.py  session.py
src/origin_sdk/service/: InputsEditor.py  Project.py  Scenario.py
src/origin_sdk/types/: error_types.py  input_types.py  (+3 more)
tests/: conftest.py  test_api_session.py  test_inputs_editor.py  test_pagination_variables.py  test_project.py  test_scenario.py  test_scenario_download_selection.py  test_scenario_download_url.py  utils.py
tests/input_tests/: test_commodities.py  test_demand.py  test_session.py  test_technology.py  utils_for_testing.py
(+40 files in other folders)
