[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "aurora_origin_sdk"
dynamic = ["version"]
authors = [
  { name = "Aurora Development", email = "aurora_development@auroraer.com" },
]
readme = "README.md"
keywords = [
  "aurora",
  "energy",
  "research",
  "auroraenergyresearch",
  "aer",
  "origin",
  "sdk",
]
license = { file = "LICENSE" }
dependencies = ["requests==2.28.2", "pandas==1.5.3", "appdirs==1.4.4", "numpy==1.26.4"]

[project.urls]
repository = "https://github.com/AuroraEnergyResearch/aurora-origin-python-sdk"

[project.optional-dependencies]
setup = ["pytest-runner"]
tests = ["pytest"]
development = [
  "mypy",
  "flake8",
  "black",
  "pytest",
  "pytest-snapshot",
  "debugpy",
  "novella",
  "pydoc-markdown[novella]",
]
notebooks = ["matplotlib", "pandas", "ipykernel"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.mypy]
exclude = ["src/origin_sdk"]
ignore_missing_imports = true