[project]
name = "aurora_origin_sdk"
version = "0.29.2"
authors = [
  { name = "Aurora Development", email = "aurora_development@auroraer.com" },
]
readme = "README.md"
keywords = [
  "aurora",
  "energy",
  "research",
  "auroraenergyresearch",
  "aer",
  "origin",
  "sdk",
]
license = { file = "LICENSE" }
dependencies = [
  "requests>=2.28.2,<3.0",
  "appdirs>=1.4.4,<2.0",
  "pandas>=2.3.3; python_version>='3.14'",
  "pandas; python_version<'3.14'"
]
requires-python = ">=3.9,<3.15"

[dependency-groups]
dev = ["aurora_origin_sdk[development]"]

[project.urls]
repository = "https://github.com/AuroraEnergyResearch/aurora-origin-python-sdk"

[project.optional-dependencies]
setup = ["pytest-runner"]
tests = ["pytest"]
development = [
  "mypy",
  "flake8",
  "black",
  "pytest",
  "pytest-snapshot",
  "debugpy",
  "novella",
  "pydoc-markdown[novella]",
]
notebooks = ["matplotlib", "pandas", "ipykernel"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["src"]
